# PatternHandler

./: CMakeLists.txt  example.txt  main.cpp  readme.md
inc/: Utils.hpp  fileHandler.hpp  patternCall.hpp  patternHandler.hpp  patternMapper.hpp
src/: Utils.cpp  fileHandler.cpp  patternHandler.cpp  patternMapper.cpp
src/tst/: Utils_test.cpp  fileHandler_test.cpp  patternMapper_test.cpp  test_main.cpp
